--- a/preprocessing/preprocess_data2.ipynb
+++ b/preprocessing/preprocess_data2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "a19c250c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "        if m.distance < 0.75 * n.distance:\n",
     "            good.append(m)\n",
     "    # print(good)\n",
-    "    if len(good) < 1:\n",
+    "    if len(good) < 5:\n",
     "        raise RuntimeError(\"Not enough matches for robust H\")\n",
     "\n",
     "    pts1 = np.float32([k1[m.queryIdx].pt for m in good]).reshape(-1,1,2)\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "67d9a711",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "270484da",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0d90f0ce",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "7cb3307e",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "ebd1020b",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "f4f1735c",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "d41d25e7",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "9707d4d9",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "f2fdba69",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "ca633fcf",
    "metadata": {},
    "outputs": [],
@@ -303,45 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "3b36d43f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/eddie/Downloads/temp/P02_10/frame_000135.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000136.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000137.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000138.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000139.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000140.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000141.jpg\n",
-      "/Users/eddie/Downloads/temp/P02_10/frame_000142.jpg\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Homography failed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m     frame2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(frames_root_dir\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mframe_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnext_index\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m06d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28mprint\u001b[39m(frames_root_dir\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mframe_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnext_index\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m06d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mproject_bbox_homography\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbbox\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m     next_center\u001b[38;5;241m.\u001b[39mappend(res[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maabb2\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# print(next_index, next_center)    \u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[18], line 31\u001b[0m, in \u001b[0;36mproject_bbox_homography\u001b[1;34m(img1, img2, bbox1)\u001b[0m\n\u001b[0;32m     29\u001b[0m H, mask \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mfindHomography(pts1, pts2, cv2\u001b[38;5;241m.\u001b[39mRANSAC, \u001b[38;5;241m3.0\u001b[39m)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m H \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 31\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHomography failed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m# 3) project box corners\u001b[39;00m\n\u001b[0;32m     34\u001b[0m dst \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mperspectiveTransform(src_corners, H)\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Homography failed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
     "from pathlib import Path\n",
+    "import csv\n",
     "# print(os.listdir(\"/Users/eddie/Trauma_THOMPSON/Trauma_THOMPSON/Hand Tracking Dataset/Hand Tracking Dataset/train/\"))\n",
-    "dirs = os.listdir(\"/Users/eddie/Trauma_THOMPSON/Trauma_THOMPSON/Hand Tracking Dataset/Hand Tracking Dataset/test/\")\n",
-    "for dir in dirs[6:]: \n",
-    "    root_dir = \"/Users/eddie/Trauma_THOMPSON/Trauma_THOMPSON/Hand Tracking Dataset/Hand Tracking Dataset/test/\" + dir + \"/\" + dir + \"/\"\n",
+    "dirs = os.listdir(\"/Users/eddie/Trauma_THOMPSON/Trauma_THOMPSON/Hand Tracking Dataset/Hand Tracking Dataset/train/\")\n",
+    "for dir in dirs[0:1]: \n",
+    "    root_dir = \"/Users/eddie/Trauma_THOMPSON/Trauma_THOMPSON/Hand Tracking Dataset/Hand Tracking Dataset/train/\" + dir + \"/\" + dir + \"/\"\n",
     "    bboxes = []\n",
     "    hand_ids = []\n",
     "    centers = []\n",
@@ -356,7 +330,7 @@
     "    # print(len(bboxes))\n",
     "    # print(hand_ids)\n",
     "    # print(len(hand_ids))\n",
-    "    num_frames = 10\n",
+    "    num_frames = 50\n",
     "    frames_root_dir = \"/Users/eddie/Downloads/temp/\" + dir + \"/\"\n",
     "    projected_centers = []\n",
     "\n",
@@ -376,6 +350,7 @@
     "            # print(next_index, next_center)    \n",
     "            temp_centers.append(next_center)\n",
     "            next_index = next_index+1\n",
+    "        \n",
     "        projected_centers.append(temp_centers)\n",
     "    # print(projected_centers[0][0][0][0])\n",
     "    # print(len(projected_centers))\n",
@@ -393,17 +368,17 @@
     "            # print(len(centers[i]))\n",
     "            if len(projected_centers[j][i]) == 0:\n",
     "                left_hand = (10000, 10000, 10000, 10000)\n",
-    "                left_center = 10000\n",
+    "                left_center = (10000,10000)\n",
     "                right_hand = (10000, 10000, 10000, 10000)\n",
-    "                right_center = 10000\n",
+    "                right_center = (10000,10000)\n",
     "            elif len(projected_centers[j][i])==1 and hand_ids[j][0]==0:\n",
     "                left_hand = projected_centers[j][i][0]\n",
     "                left_center = find_center(projected_centers[j][i][0])\n",
     "                right_hand= (10000, 10000, 10000, 10000)\n",
-    "                right_center=10000\n",
+    "                right_center=(10000,10000)\n",
     "            elif len(projected_centers[j][i])==1 and hand_ids[j][0]==1:\n",
     "                left_hand = (10000, 10000, 10000, 10000)\n",
-    "                left_center = 10000\n",
+    "                left_center = (10000,10000)\n",
     "                right_hand = projected_centers[j][i][0]\n",
     "                right_center = find_center(projected_centers[j][i][0])\n",
     "            else:\n",
@@ -416,10 +391,11 @@
     "            left_row_center.append(left_center)\n",
     "            right_row_center.append(right_center)\n",
     "            # print(left_row, right_row)\n",
+    "        row = [\"frame_\"+f\"{j+1:06d}\",left_row_center, right_row_center, left_row, right_row]\n",
     "        rows.append([\"frame_\"+f\"{j+1:06d}\",left_row_center, right_row_center, left_row, right_row])\n",
-    "    with open(dir+\"_10_test.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
-    "        writer = csv.writer(f)\n",
-    "        writer.writerows(rows)\n",
+    "        with open(dir+\"_50.csv\", \"a\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerows(row)\n",
     "        \n",
     "# annotations = os.listdir(root_dir)\n",
     "# for annotation in annotations[:100]:\n",
